--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,7 +30,7 @@
   <aside class="menu">
     <ul class="menu-list">
       <li>
-        <a href="{{site.url}}">
+        <a href="https://aaroncuddeback.com">
             <i class="fas fa-home"></i> HOME
         </a>
       </li>
