--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,6 +54,11 @@
             <i class="fas fa-book"></i> BOOKS
         </a>
       </li>
+      <li>
+        <a href="{{site.url}}/about.html">
+            <i class="far fa-calendar-alt"></i> ABOUT
+        </a>
+      </li>
     </ul>
   </div>
 </div>
