--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -56,7 +56,7 @@
       </li>
       <li>
         <a href="{{site.url}}/about.html">
-            <i class="far fa-info-circle"></i> ABOUT
+            <i class="fas fa-info-circle"></i> ABOUT
         </a>
       </li>
     </ul>
