update all secondary colors

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -9,7 +9,7 @@
 $desktop-size: 924px;
 
 $primary-color: #33dabd;
-$secondary-color: #f2f5ea;
+$secondary-color: #56282d;
 
 $dark-background: #3f4a59;
 $lighter-background: #455160;
