--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .transparent:hover {
-  color: #f4b393;
+  color: #56282d;
 }
 
 .light-text {
@@ -54,7 +54,7 @@ body {
 }
 
 .secondary-color {
-  color: #f4b393;
+  color: #56282d;
 }
 
 .no-style {
@@ -130,7 +130,7 @@ body {
 
 .timeline-card .card-bottom a:hover .fas,
 .timeline-card .card-bottom a:hover .far {
-  color: #f4b393;
+  color: #56282d;
   -webkit-transition: color 86ms ease-in;
   transition: color 86ms ease-in;
 }
@@ -186,7 +186,7 @@ body {
 }
 
 .bottom-menu a:hover {
-  color: #f4b393;
+  color: #56282d;
 }
 
 .metadata {
@@ -217,7 +217,7 @@ body {
 }
 
 .post-content a:hover {
-  color: #8067b6;
+  color: #56282d;
   -webkit-transition: color 85ms ease-in;
   transition: color 85ms ease-in;
 }
