--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,7 +8,7 @@
 
 $desktop-size: 924px;
 
-$primary-color: #33dabd;
+$primary-color: #0d5c63;
 $secondary-color: #56282d;
 
 $dark-background: #3f4a59;
