update sidebar menu color

--- a/assets/style.css
+++ b/assets/style.css
@@ -362,7 +362,7 @@ body {
 
 .sidebar .menu {
   padding: 2rem 3rem;
-  background-color: #455160;
+  background-color: #c0c5c1;
 }
 
 .sidebar .menu .far,
