--- a/assets/style.scss
+++ b/assets/style.scss
@@ -9,7 +9,7 @@
 $desktop-size: 924px;
 
 $primary-color: #01d0b2;
-$secondary-color: #56282d;
+$secondary-color: #3f4a59;
 
 $dark-background: #3f4a59;
 $lighter-background: #455160;
