color change sidebar

--- a/assets/style.css
+++ b/assets/style.css
@@ -362,7 +362,7 @@ body {
 
 .sidebar .menu {
   padding: 2rem 3rem;
-  background-color: #56272c;
+  background-color: #3f4a59;
 }
 
 .sidebar .menu .far,
