--- a/assets/style.css
+++ b/assets/style.css
@@ -344,7 +344,7 @@ body {
 
 .sidebar .avatar {
   padding: 2.5rem 3rem;
-  background: #0d5c63;
+  background: #95a3a4;
 }
 
 .sidebar .social {
@@ -362,7 +362,7 @@ body {
 
 .sidebar .menu {
   padding: 2rem 3rem;
-  background-color: #f3f5f6;
+  background-color: #3f4a59;
 }
 
 .sidebar .menu .far,
