update sidebar and book

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -59,6 +59,11 @@
             <i class="fas fa-info-circle"></i> ABOUT
         </a>
       </li>
+      <li>
+        <a href="https://aaroncuddeback.com">
+            <i class="fas fa-bookmark"></i> AARONCUDDEBACK.COM
+        </a>
+      </li>
     </ul>
   </div>
 </div>
